--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "core-util-is": "^1.0.2",
     "editorconfig": "^0.15.3",
     "eslintrc": "^1.0.6",
