--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "editorconfig": "^0.15.3",
     "eslintrc": "^1.0.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
