--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "leandro <leandro.vicente98@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js -e js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -19,7 +19,8 @@
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "nunjucks": "^3.2.0",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.21.3",
+    "session-file-store": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
