--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "eslintrc": "^1.0.6",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "nunjucks": "^3.2.0",
+    "nunjucks-date-filter": "^0.1.1",
     "sequelize": "^5.21.3",
     "session-file-store": "^1.3.1"
   },
